--- a/ProyectoIntegrador/views/login.ejs
+++ b/ProyectoIntegrador/views/login.ejs
@@ -14,11 +14,24 @@
 				<h2 class="products-title">Ingresar</h2>
 			</div>
 			<!-- Show the "ultimos" products -->
-			<h2 class="col-12"> <i>///////////////////////////////////////// <br> Acá va el formulario de login. <br>
-			Debe cumplir con los puntos de la consigna y ser coherente con la tabla de la base de datos <br>
-			Eliminen estás líneas y coloquen el formulario. <br>
-			Recuerden todo lo que necesita tanto la etiqueta form como los campos input para operar correctamtente</i> <br>
-			////////////////
+			<h2 class="col-12"> 
+				<form action="/searchResults" method="GET">
+					<div>
+						<label for="user">Usuario:</label>
+						<input id="user" type="email" name="email" value="">
+					</div>
+					<div>
+						<label for="password">Contrasenia:</label>
+						<input id="password" type="password" name="password" value="">
+					</div>
+					<div>
+						<label for="recordame">Recordame</label>
+						<input id="recordame" type="checkbox" name="recordame" value="">
+					</div>
+					<div>
+						<button type="submit">Enviar</button>
+					</div>
+				</form>
 			</h2>
 
 
