--- a/ProyectoIntegrador/views/partials/product-add.ejs
+++ b/ProyectoIntegrador/views/partials/product-add.ejs
@@ -15,11 +15,24 @@
 				<h2 class="products-title">Agregar productos</h2>
 			</div>
 			<!-- Show the "ultimos" products -->
-			<h2 class="col-12"> <i>///////////////////////////////////////// <br> Acá va el formulario para agregar prodcutos al catálogo. <br>
-			Debe cumplir con los puntos de la consigna y ser coherente con la tabla de la base de datos. <br>
-			Eliminen estás líneas y coloquen el formulario. <br>
-			Recuerden todo lo que necesita tanto la etiqueta form como los campos input para operar correctamtente</i> <br>
-			////////////////
+			<h2 class="col-12"> 
+				<form action="/searchResults" method="GET">
+					<div>
+						<label for="image">Imagen:</label>
+						<input id="image" type="file" name="image" value="">
+					</div>
+					<div>
+						<label for="producto">Nombre del producto:</label>
+						<input id="producto" type="text" name="producto" value="">
+					</div>
+					<div>
+						<label for="descripcion">Descripcion:</label>
+						<input id="descripcion" type="text" name="descripcion" value="">
+					</div>
+					<div>
+						<button type="submit">Enviar</button>
+					</div>
+				</form>
 			</h2>
 
 
