--- a/ProyectoIntegrador/views/register.ejs
+++ b/ProyectoIntegrador/views/register.ejs
@@ -14,11 +14,36 @@
 				<h2 class="products-title">Registrate</h2>
 			</div>
 			<!-- Show the "ultimos" products -->
-			<h2 class="col-12"> <i>///////////////////////////////////////// <br> Acá va el formulario de registro. <br>
-			Debe cumplir con los puntos de la consigna y ser coherente con la tabla de la base de datos <br>
-			Eliminen estás líneas y coloquen el formulario. <br>
-			Recuerden todo lo que necesita tanto la etiqueta form como los campos input para operar correctamtente</i> <br>
-			////////////////
+			<h2 class="col-12">
+				<form action="/searchResults" method="GET">
+					<div>
+						<label for="email">Email:</label>
+						<input id="email" type="email" name="email" value="">
+					</div>
+					<div>
+						<label for="user">Usuario:</label>
+						<input id="user" type="text" name="user" value="">
+					</div>
+					<div>
+						<label for="password">Contrasenia:</label>
+						<input id="password" type="password" name="password" value="">
+					</div>
+					<div>
+						<label for="fecha">Fecha de nacimiento:</label>
+						<input id="fecha" type="date" name="fecha" value="">
+					</div>
+					<div>
+						<label for="DNI">DNI:</label>
+						<input id="DNI" type="number" name="DNI" value="">
+					</div>
+					<div>
+						<label for="profile">Foto de perfil:</label>
+						<input id="profile" type="text" name="profile" value="">
+					</div>
+					<div>
+						<button type="submit">Enviar</button>
+					</div>
+				</form>		
 			</h2>
 
 
