--- a/ProyectoIntegrador/views/partials/headerLogueado.ejs
+++ b/ProyectoIntegrador/views/partials/headerLogueado.ejs
@@ -45,7 +45,7 @@
                     </form>
                 </li> -->
                 <li>
-                    <a href="/register">Creá tu cuenta <i class="far fa-address-card"></i>
+                    <a href="/register">Crea tu cuenta <i class="far fa-address-card"></i>
                     </a>
                 </li>
                 <li>
