--- a/ProyectoIntegrador/views/register.ejs
+++ b/ProyectoIntegrador/views/register.ejs
@@ -15,7 +15,7 @@
 			</div>
 			<!-- Show the "ultimos" products -->
 			<h2 class="col-12">
-				<form action="/searchResults" method="GET">
+				<form action="/login" method="GET">
 					<div>
 						<label for="email">Email:</label>
 						<input id="email" type="email" name="email" value="">
