--- a/ProyectoIntegrador/views/partials/headerDeslogueado.ejs
+++ b/ProyectoIntegrador/views/partials/headerDeslogueado.ejs
@@ -29,20 +29,16 @@
         <nav class="main-navbar">
             <ul class="left-navbar">
                 <li><a href= "/">Todos los productos</a></li>
-                 <li><a href="/productAdd">Cargar productos</a></li>
             </ul>
 
             <ul class="right-navbar">
-                 <li><a href="profile.html">
-                        Usuario 1 <i class="fas fa-user"></i>
+             
+                <li>
+                    <a href="/register">Crea tu cuenta <i class="far fa-address-card"></i>
                     </a>
                 </li>
                 <li>
-                    <form action="" method="post">
-                        <button class="logout" type="submit">
-                            Cerrar sesión <i class="fas fa-sign-in-alt"></i>
-                        </button>
-                    </form>
+                    <a href="/login">Ingresá <i class="fas fa-sign-in-alt"></i></a>
                 </li>
             </ul>
         </nav>
