--- a/ProyectoIntegrador/views/partials/headerLogueado.ejs
+++ b/ProyectoIntegrador/views/partials/headerLogueado.ejs
@@ -3,7 +3,7 @@
         <div class="row align-items-center">
             <div class="col-5 col-md-2">
                 <a href="/" class="main-header_home-link">
-                    <img src="./images/logo-mercado-liebre.svg">
+                    <img src="/images/logo-mercado-liebre.svg">
                 </a>
             </div>
 
@@ -45,11 +45,11 @@
                     </form>
                 </li> -->
                 <li>
-                    <a href="/register">Crea tu cuenta <i class="far fa-address-card"></i>
+                    <a href="/users/register">Crea tu cuenta <i class="far fa-address-card"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="/login">Ingresá <i class="fas fa-sign-in-alt"></i></a>
+                    <a href="/users/login">Ingresá <i class="fas fa-sign-in-alt"></i></a>
                 </li>
             </ul>
         </nav>
