--- a/ProyectoIntegrador/views/login.ejs
+++ b/ProyectoIntegrador/views/login.ejs
@@ -4,7 +4,7 @@
 <%- include('./partials/head') %>
 
 	<!-- Header -->
-<%- include('./partials/headerLogueado') %>
+<%- include('./partials/headerDeslogueado') %>
 	<!-- /Header -->
 
 	<!-- Novedades -->
@@ -15,7 +15,7 @@
 			</div>
 			<!-- Show the "ultimos" products -->
 			<h2 class="col-12"> 
-				<form action="/searchResults" method="GET">
+				<form action="/users" method="GET">
 					<div>
 						<label for="user">Usuario:</label>
 						<input id="user" type="email" name="email" value="">
