--- a/ProyectoIntegrador/views/partials/headerLogueado.ejs
+++ b/ProyectoIntegrador/views/partials/headerLogueado.ejs
@@ -29,28 +29,21 @@
         <nav class="main-navbar">
             <ul class="left-navbar">
                 <li><a href= "/">Todos los productos</a></li>
-                 <li><a href="/productAdd">Cargar productos</a></li>
+                 <li><a href="/product/productAdd">Cargar productos</a></li>
             </ul>
 
             <ul class="right-navbar">
-                 <li><a href="profile.html">
+                 <li><a href="/users/profile">
                         Usuario 1 <i class="fas fa-user"></i>
                     </a>
                 </li>
                 <li>
-                    <form action="" method="post">
+                    <form action="/" method="post">
                         <button class="logout" type="submit">
                             Cerrar sesión <i class="fas fa-sign-in-alt"></i>
                         </button>
                     </form>
-                </li> -->
-                <li>
-                    <a href="/users/register">Crea tu cuenta <i class="far fa-address-card"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="/users/login">Ingresá <i class="fas fa-sign-in-alt"></i></a>
-                </li>
+                </li> 
             </ul>
         </nav>
     </div>
