--- a/ProyectoIntegrador/public/stylesheets/app.css
+++ b/ProyectoIntegrador/public/stylesheets/app.css
@@ -4,12 +4,19 @@
 
 /*====== Variables ======*/
 :root {
-  --yellow: #EAC926;
-  --dark-blue: #03264C;
-  --light-blue: #1259c3;
-  --gray: #666666;
-  --light-gray: #ebebeb;
-  --green: #39b54a;
+  /* Header */
+  --yellow: #000000;
+  
+  --dark-blue: #00f020;
+
+  /* iconos footer */
+  --light-blue: #ebef0c;
+/* subtitulos */
+  --gray: #ebef0c;
+  /* Fondo de la pagina */
+  --light-gray: #a49797;
+  /*  */
+  --green: #0015ff;
   --base-font-family: 'Roboto', sans-serif
 }
 
@@ -77,6 +84,7 @@ hr {
 }
 
 .main-header_credit-link {
+  color: white;
   font-size: 1.5em;
   margin-top: 20px;
   text-align: center;
@@ -137,6 +145,7 @@ hr {
   border: 0px;
   cursor: pointer;
   font-size: 1em;
+  color: white
 }
 
 .logout:hover{
@@ -250,6 +259,7 @@ hr {
 .product-box:hover p {
   height: 36px;
   margin-top: 15px;
+  color:#000000
 }
 
 .product-box:hover i {
@@ -259,7 +269,7 @@ hr {
 
 /*====== Footer ======*/
 .main-footer {
-  background-color: #ffffff;
+  background-color: #000000;
   padding: 20px 0;
   margin-top: 80px;
 }
@@ -503,6 +513,7 @@ textarea.form-input {
 
   .left-navbar a,
   .right-navbar a {
+    color: white;
     border-bottom: none;
   }
 
