--- a/ProyectoIntegrador/views/users.ejs
+++ b/ProyectoIntegrador/views/users.ejs
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="es">
+<!/DO/CTYPE>
+ lang="es">
 <!-- Include Head -->
 <%- include('./partials/head') %>
 <body>
@@ -22,7 +22,7 @@
 			<!-- Show the "ultimos" products -->
 			<div class="col-12 col-sm-6 col-lg-3">
 				<section class="product-box">
-					<a href="product.html">
+					<a href="/product">
 						<figure class="product-box_image">
 							<img src="images/products/default-image.png" alt="cafetera moulinex">
 						</figure>
@@ -36,7 +36,7 @@
 			</div>
 			<div class="col-12 col-sm-6 col-lg-3">
 				<section class="product-box">
-					<a href="product.html">
+					<a href="/product">
 						<figure class="product-box_image">
 							<img src="images/products/default-image.png" alt="cafetera moulinex">
 						</figure>
@@ -51,7 +51,7 @@
 			</div>
 			<div class="col-12 col-sm-6 col-lg-3">
 				<section class="product-box">
-					<a href="product.html">
+					<a href="/product">
 						<figure class="product-box_image">
 							<img src="images/products/default-image.png" alt="cafetera moulinex">
 						</figure>
@@ -66,7 +66,7 @@
 			</div>
 			<div class="col-12 col-sm-6 col-lg-3">
 				<section class="product-box">
-					<a href="product.html">
+					<a href="/product">
 						<figure class="product-box_image">
 							<img src="images/products/default-image.png" alt="cafetera moulinex">
 						</figure>
@@ -91,7 +91,7 @@
 			<!-- Show the "ultimos" products -->
 			<div class="col-12 col-sm-6 col-lg-3">
 				<section class="product-box">
-					<a href="product.html">
+					<a href="/product">
 						<figure class="product-box_image">
 							<img src="images/products/default-image.png" alt="cafetera moulinex">
 						</figure>
@@ -105,7 +105,7 @@
 			</div>
 			<div class="col-12 col-sm-6 col-lg-3">
 				<section class="product-box">
-					<a href="product.html">
+					<a href="/product">
 						<figure class="product-box_image">
 							<img src="images/products/default-image.png" alt="cafetera moulinex">
 						</figure>
@@ -119,7 +119,7 @@
 			</div>
 			<div class="col-12 col-sm-6 col-lg-3">
 				<section class="product-box">
-					<a href="product.html">
+					<a href="/product">
 						<figure class="product-box_image">
 							<img src="images/products/default-image.png" alt="cafetera moulinex">
 						</figure>
@@ -133,7 +133,7 @@
 			</div>
 			<div class="col-12 col-sm-6 col-lg-3">
 				<section class="product-box">
-					<a href="product.html">
+					<a href="/product">
 						<figure class="product-box_image">
 							<img src="images/products/default-image.png" alt="cafetera moulinex">
 						</figure>
@@ -152,5 +152,5 @@
 
 	<%- include('./partials/footer') %>
 
-</body>	
-</html>
+</b/ody>	
+<>
