--- a/ProyectoIntegrador/views/users.ejs
+++ b/ProyectoIntegrador/views/users.ejs
@@ -1,5 +1,5 @@
-<!/DO/CTYPE>
- lang="es">
+<!DOCTYPE html>
+<html lang="es">
 <!-- Include Head -->
 <%- include('./partials/head') %>
 <body>
@@ -152,5 +152,5 @@
 
 	<%- include('./partials/footer') %>
 
-</b/ody>	
-<>
+</body>	
+</html>
