--- a/ProyectoIntegrador/public/stylesheets/app.css
+++ b/ProyectoIntegrador/public/stylesheets/app.css
@@ -7,14 +7,14 @@
   /* Header */
   --yellow: #000000;
   
-  --dark-blue: #00f020;
+  --dark-blue: #ebef0c;
 
   /* iconos footer */
   --light-blue: #ebef0c;
 /* subtitulos */
   --gray: #ebef0c;
   /* Fondo de la pagina */
-  --light-gray: #a49797;
+  --light-gray: black;
   /*  */
   --green: #0015ff;
   --base-font-family: 'Roboto', sans-serif
