--- a/ProyectoIntegrador/views/index.ejs
+++ b/ProyectoIntegrador/views/index.ejs
@@ -38,7 +38,7 @@
 				<section class="product-box">
 					<a href="/product">
 						<figure class="product-box_image">
-							<img src="images/products/default-image.png" alt="cafetera moulinex">
+							<img src="images/products/auto2.jpeg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
 							<h2>Nombre del producto</h2>
