--- a/ProyectoIntegrador/public/stylesheets/app.css
+++ b/ProyectoIntegrador/public/stylesheets/app.css
@@ -14,7 +14,7 @@
 /* subtitulos */
   --gray: #ebef0c;
   /* Fondo de la pagina */
-  --light-gray: black;
+  --light-gray: rgb(0, 0, 0);
   /*  */
   --green: #0015ff;
   --base-font-family: 'Roboto', sans-serif
@@ -211,6 +211,7 @@ hr {
   font-size: 2.4em;
   font-weight: 300;
   margin: 0;
+  color:#000000;
 }
 
 .product-box_data span {
@@ -477,6 +478,7 @@ textarea.form-input {
 .main-title{
   font-size: 25px;
   margin-bottom: 10px;
+  color: white;
 }
 
 .btn{
