--- a/ProyectoIntegrador/views/index.ejs
+++ b/ProyectoIntegrador/views/index.ejs
@@ -41,7 +41,7 @@
 							<img src="images/products/auto2.jpeg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
+							<h2>Lamborghini</h2>
 							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
 								delectus ex</p>
 							<p>Comentarios: 12</p>
@@ -56,7 +56,7 @@
 							<img src="images/products/auto3.jpg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
+							<h2>Pagani</h2>
 							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
 								delectus ex</p>
 							<p>Comentarios: 12</p>
@@ -71,7 +71,7 @@
 							<img src="images/products/auto4.jpeg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
+							<h2>Porsche</h2>
 							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
 								delectus ex</p>
 							<p>Comentarios: 12</p>
@@ -96,7 +96,7 @@
 							<img src="images/products/auto5.jpg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
+							<h2>BMW</h2>
 							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
 							<p>Comentarios: 12</p>
 						</article>
@@ -110,7 +110,7 @@
 							<img src="images/products/auto6.jpg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
+							<h2>Honda</h2>
 							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
 							<p>Comentarios: 12</p>
 						</article>
@@ -124,7 +124,7 @@
 							<img src="images/products/auto7.jpeg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
+							<h2>Alfa Romeo</h2>
 							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
 							<p>Comentarios: 12</p>
 						</article>
@@ -138,7 +138,7 @@
 							<img src="images/products/auto8.jpeg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
+							<h2>Nissan</h2>
 							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
 							<p>Comentarios: 12</p>
 						</article>
