--- a/ProyectoIntegrador/views/profile.ejs
+++ b/ProyectoIntegrador/views/profile.ejs
@@ -45,10 +45,10 @@
 				<section class="product-box">
 					<a href="/product">
 						<figure class="product-box_image">
-							<img src="images/product/default-image.png" alt="cafetera moulinex">
+							<img src="/images/products/auto1.jpg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
+							<h2>Ferrari</h2>
 							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
 							<p>Comentarios: 12</p>
 						</article>
@@ -59,10 +59,10 @@
 				<section class="product-box">
 					<a href="/product">
 						<figure class="product-box_image">
-							<img src="images/product/default-image.png" alt="cafetera moulinex">
+							<img src="/images/products/auto2.jpeg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
+							<h2>Lamborghini</h2>
 							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
 								delectus ex</p>
 							<p>Comentarios: 12</p>
@@ -74,10 +74,10 @@
 				<section class="product-box">
 					<a href="/product">
 						<figure class="product-box_image">
-							<img src="images/product/default-image.png" alt="cafetera moulinex">
+							<img src="/images/products/auto3.jpg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
+							<h2>Pagani</h2>
 							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
 								delectus ex</p>
 							<p>Comentarios: 12</p>
@@ -89,10 +89,10 @@
 				<section class="product-box">
 					<a href="/product">
 						<figure class="product-box_image">
-							<img src="images/product/default-image.png" alt="cafetera moulinex">
+							<img src="/images/products/auto4.jpeg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
+							<h2>Porsche</h2>
 							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
 								delectus ex</p>
 							<p>Comentarios: 12</p>
@@ -104,12 +104,11 @@
 				<section class="product-box">
 					<a href="/product">
 						<figure class="product-box_image">
-							<img src="images/product/default-image.png" alt="cafetera moulinex">
+							<img src="/images/products/auto5.jpg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-								delectus ex</p>
+							<h2>BMW</h2>
+							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
 							<p>Comentarios: 12</p>
 						</article>
 					</a>
@@ -119,12 +118,11 @@
 				<section class="product-box">
 					<a href="/product">
 						<figure class="product-box_image">
-							<img src="images/product/default-image.png" alt="cafetera moulinex">
+							<img src="/images/products/auto6.jpg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-								delectus ex</p>
+							<h2>Honda</h2>
+							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
 							<p>Comentarios: 12</p>
 						</article>
 					</a>
@@ -134,12 +132,11 @@
 				<section class="product-box">
 					<a href="/product">
 						<figure class="product-box_image">
-							<img src="images/product/default-image.png" alt="cafetera moulinex">
+							<img src="/images/products/auto7.jpeg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-								delectus ex</p>
+							<h2>Alfa Romeo</h2>
+							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
 							<p>Comentarios: 12</p>
 						</article>
 					</a>
@@ -149,12 +146,11 @@
 				<section class="product-box">
 					<a href="/product">
 						<figure class="product-box_image">
-							<img src="images/product/default-image.png" alt="cafetera moulinex">
+							<img src="/images/products/auto8.jpeg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
-							<h2>Nombre del producto</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-								delectus ex</p>
+							<h2>Nissan</h2>
+							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
 							<p>Comentarios: 12</p>
 						</article>
 					</a>
