--- a/ProyectoIntegrador/views/partials/footer.ejs
+++ b/ProyectoIntegrador/views/partials/footer.ejs
@@ -6,24 +6,24 @@
                 <article class="footer-data">
                     <i class="fas fa-credit-card"></i>
                     <h2>Pagá con tarjeta o en efectivo</h2>
-                    <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y
+                    <p>En Luxury Cars, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y
                         siempre es seguro!</p>
                 </article>
             </div>
             <div class="col-12 col-lg-4">
                 <article class="footer-data">
                     <i class="fas fa-gift"></i>
-                    <h2>Envío gratis desde $ 1.999</h2>
-                    <p>Solo por estar registrado en Mercado Liebre tenés envíos gratis en miles de productos. Es un
-                        beneficio de Mercado Puntos.</p>
+                    <h2>Seguro gratis para socios</h2>
+                    <p>Solo por ser socio tenés seguro gratis en miles de autos. Es un
+                        beneficio de Luxury Points.</p>
                 </article>
             </div>
             <div class="col-12 col-lg-4">
                 <article class="footer-data">
                     <i class="fas fa-user-shield"></i>
                     <h2>Seguridad, de principio a fin</h2>
-                    <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás
-                        siempre protegido.</p>
+                    <p>¿No te gusta? ¡Cambialo! En Luxury Cars, podes cambiar el auto dentro de un rango de 24hs, porque con nosotros,
+                        siempre estas protegido.</p>
                 </article>
             </div>
         </div>
