cambios descripciones parte1

--- a/ProyectoIntegrador/views/index.ejs
+++ b/ProyectoIntegrador/views/index.ejs
@@ -28,7 +28,7 @@
 						</figure>
 						<article class="product-box_data">
 							<h2>Ferrari</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
+							<p>Ferrari 428 Italia, destacado por su aceleracion. </p>
 							<p>Comentarios: 12</p>
 						</article>
 					</a>
@@ -42,8 +42,7 @@
 						</figure>
 						<article class="product-box_data">
 							<h2>Lamborghini</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-								delectus ex</p>
+							<p>Lamborghini Gallardo, un clasico a traves de los años.</p>
 							<p>Comentarios: 12</p>
 						</article>
 					</a>
@@ -57,8 +56,7 @@
 						</figure>
 						<article class="product-box_data">
 							<h2>Pagani</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-								delectus ex</p>
+							<p>Pagani Huraya, elegante como una gazela.</p>
 							<p>Comentarios: 12</p>
 						</article>
 					</a>
@@ -72,8 +70,7 @@
 						</figure>
 						<article class="product-box_data">
 							<h2>Porsche</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-								delectus ex</p>
+							<p>Porsche 930, un auto para gente con buen gusto.</p>
 							<p>Comentarios: 12</p>
 						</article>
 					</a>
@@ -97,7 +94,7 @@
 						</figure>
 						<article class="product-box_data">
 							<h2>BMW</h2>
-							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
+							<p>BMW M2, no es un auto, mas bien una experiencia.</p>
 							<p>Comentarios: 12</p>
 						</article>
 					</a>
@@ -111,7 +108,7 @@
 						</figure>
 						<article class="product-box_data">
 							<h2>Honda</h2>
-							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
+							<p>Pontiac GTO, un auto para los de la vieja escuela.</p>
 							<p>Comentarios: 12</p>
 						</article>
 					</a>
@@ -125,7 +122,7 @@
 						</figure>
 						<article class="product-box_data">
 							<h2>Alfa Romeo</h2>
-							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
+							<p>Alfa Romeo GTA, su lujoso interior es tope de gamma.</p>
 							<p>Comentarios: 12</p>
 						</article>
 					</a>
@@ -139,7 +136,7 @@
 						</figure>
 						<article class="product-box_data">
 							<h2>Nissan</h2>
-							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
+							<p>Nissan 370Z, para ganar en todas las carreras.</p>
 							<p>Comentarios: 12</p>
 						</article>
 					</a>
