--- a/ProyectoIntegrador/views/product.ejs
+++ b/ProyectoIntegrador/views/product.ejs
@@ -20,9 +20,8 @@
 				<article class="col-12 col-lg-8 product-detail-info">
 					<img src="images/products/auto5.jpg" alt="" class="product-detail-img">
 					<p class="product-detail-description">
-						Descripción corta del producto. En la página principal solo se ven 2 líneas de estar descripción.Lorem ipsum dolor,
-						sit amet consectetur adipisicing elit. Tae ipsam amet eum, totam dolore libero illo unde? Consectetur dolorem neque
-						veritatis.</p>
+						BMW M2, no es un auto, mas bien una experiencia. De 0 a 100km/h en 5.7 segundos, este vehiculo no deja nada que desear 
+						en el departamento de velocidad. Para seguir sumando, su espacioso interior lo hace uno de los autos mas comodos en la industria.</p>
 				</article>
 				<div class="col-12 col-lg-4">
 					<section class="comments">
