--- a/ProyectoIntegrador/views/index.ejs
+++ b/ProyectoIntegrador/views/index.ejs
@@ -107,7 +107,7 @@
 							<img src="images/products/auto6.jpg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
-							<h2>Honda</h2>
+							<h2>Pontiac</h2>
 							<p>Pontiac GTO, un auto para los de la vieja escuela.</p>
 							<p>Comentarios: 12</p>
 						</article>
