--- a/ProyectoIntegrador/views/profile.ejs
+++ b/ProyectoIntegrador/views/profile.ejs
@@ -49,7 +49,7 @@
 						</figure>
 						<article class="product-box_data">
 							<h2>Ferrari</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
+							<p>Ferrari 428 Italia, destacado por su aceleracion.</p>
 							<p>Comentarios: 12</p>
 						</article>
 					</a>
@@ -63,8 +63,7 @@
 						</figure>
 						<article class="product-box_data">
 							<h2>Lamborghini</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-								delectus ex</p>
+							<p>Lamborghini Gallardo, un clasico a traves de los años.</p>
 							<p>Comentarios: 12</p>
 						</article>
 					</a>
@@ -78,8 +77,7 @@
 						</figure>
 						<article class="product-box_data">
 							<h2>Pagani</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-								delectus ex</p>
+							<p>Pagani Huraya, elegante como una gazela.</p>
 							<p>Comentarios: 12</p>
 						</article>
 					</a>
@@ -93,8 +91,7 @@
 						</figure>
 						<article class="product-box_data">
 							<h2>Porsche</h2>
-							<p>Descripción corta del producto Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque
-								delectus ex</p>
+							<p>Porsche 930, un auto para gente con buen gusto.</p>
 							<p>Comentarios: 12</p>
 						</article>
 					</a>
@@ -108,7 +105,7 @@
 						</figure>
 						<article class="product-box_data">
 							<h2>BMW</h2>
-							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
+							<p>BMW M2, no es un auto, mas bien una experiencia.</p>
 							<p>Comentarios: 12</p>
 						</article>
 					</a>
@@ -121,8 +118,8 @@
 							<img src="/images/products/auto6.jpg" alt="cafetera moulinex">
 						</figure>
 						<article class="product-box_data">
-							<h2>Honda</h2>
-							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
+							<h2>Pontiac</h2>
+							<p>Pontiac GTO, un auto para los de la vieja escuela.</p>
 							<p>Comentarios: 12</p>
 						</article>
 					</a>
@@ -136,7 +133,7 @@
 						</figure>
 						<article class="product-box_data">
 							<h2>Alfa Romeo</h2>
-							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
+							<p>Alfa Romeo GTA, su lujoso interior es tope de gamma.</p>
 							<p>Comentarios: 12</p>
 						</article>
 					</a>
@@ -150,7 +147,7 @@
 						</figure>
 						<article class="product-box_data">
 							<h2>Nissan</h2>
-							<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque delectus ex</p>
+							<p>Nissan 370Z, para ganar en todas las carreras.</p>
 							<p>Comentarios: 12</p>
 						</article>
 					</a>
