--- a/ProyectoIntegrador/views/product.ejs
+++ b/ProyectoIntegrador/views/product.ejs
@@ -27,45 +27,44 @@
 				<div class="col-12 col-lg-4">
 					<section class="comments">
 						<article>
-							<img src="https://via.placeholder.com/35" alt="">
+							<img src="<%=usuarios[0].foto_de_perfil%>" alt="">
 							<div class="data">
 								<p class="user">
-								<strong> <a href="/users/profile">Nombre usuario: </a> </strong>
-								 Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora doloribus enim aspernatur fugit corrupti suscipit sit dolore magnam, praesentium explicabo inventore molestias facilis labore. Fugit ipsa mollitia odit inventore consequuntur.</p>
+								<strong> <a href="/users/profile"> </a> <%= usuarios[0].usuario   %>:</strong>
+								<%= usuarios[0].comentarios  %></p>
 							</div>
 						</article>
 						<article>
-							<img src="https://via.placeholder.com/35" alt="">
+							<img src="<%=usuarios[1].foto_de_perfil%>" alt="">
 							<div class="data">
 								<p class="user">
-									<strong> <a href="/users/profile">Nombre usuario: </a> </strong>
-									Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur.</p>
+									<strong> <a href="/users/profile"><%=usuarios[1].usuario%>: </a> </strong>
+									<%=usuarios[1].comentarios%></p>
 							</div>
 						</article>
 						<article>
-							<img src="https://via.placeholder.com/35" alt="">
+							<img src="<%=usuarios[2].foto_de_perfil%>" alt="">
 							<div class="data">
 								<p class="user">
-									<strong> <a href="/users/profile">Nombre usuario: </a> </strong>
-									Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur adipisicing elit.
+									<strong> <a href="/users/profile"><%=usuarios[2].usuario%>:</a> </strong>
+									<%=usuarios[2].comentarios%>
 									</p>
 							</div>
 						</article>
 						<article>
-							<img src="https://via.placeholder.com/35" alt="">
+							<img src="<%=usuarios[3].foto_de_perfil%>" alt="">
 							<div class="data">
 								<p class="user">
-									<strong> <a href="/users/profile">Nombre usuario: </a> </strong>
-									Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet.</p>
+									<strong> <a href="/users/profile"><%=usuarios[3].usuario%>: </a> </strong>
+									<%=usuarios[3].comentarios%></p>
 							</div>
 						</article>
 						<article>
-							<img src="https://via.placeholder.com/35" alt="">
+							<img src="<%=usuarios[4].foto_de_perfil%>" alt="">
 							<div class="data">
 								<p class="user">
-									<strong> <a href="/users/profile">Nombre usuario: </a> </strong>
-									Texto del comentario que escribió el usuario Lorem ipsum dolor sit amet consectetur adipisicing elit.
-									Tempora doloribus enim aspernatur fugit corrupti suscipit sit dolore</p>
+									<strong> <a href="/users/profile"><%=usuarios[4].usuario%>:</a> </strong>
+									<%=usuarios[4].comentarios%></p>
 							</div>
 						</article>
 
