--- a/ProyectoIntegrador/views/partials/headerLogueado.ejs
+++ b/ProyectoIntegrador/views/partials/headerLogueado.ejs
@@ -34,7 +34,7 @@
 
             <ul class="right-navbar">
                  <li><a href="/users/profile">
-                        Usuario 1 <i class="fas fa-user"></i>
+                    usuario 1 <i class="fas fa-user"></i>
                     </a>
                 </li>
                 <li>
