--- a/ProyectoIntegrador/views/partials/head.ejs
+++ b/ProyectoIntegrador/views/partials/head.ejs
@@ -10,4 +10,8 @@
 	<link rel="stylesheet" href="/stylesheets/bootstrap-grid.min.css">
 	<!-- Own Stylesheet -->
 	<link rel="stylesheet" href="/stylesheets/app.css">
+	<!-- tipografia -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto+Condensed:wght@300;400&display=swap" rel="stylesheet">
 </head>
