cambios carpeta db

--- a/ProyectoIntegrador/views/product.ejs
+++ b/ProyectoIntegrador/views/product.ejs
@@ -30,7 +30,7 @@
 							<div class="data">
 								<p class="user">
 								<strong> <a href="/users/profile"> </a> <%= usuarios[0].usuario   %>:</strong>
-								<%= usuarios[0].comentarios  %></p>
+								 <%= productos[0].comentarios.textoComentario[0] %>   </p>
 							</div>
 						</article>
 						<article>
@@ -38,7 +38,7 @@
 							<div class="data">
 								<p class="user">
 									<strong> <a href="/users/profile"><%=usuarios[1].usuario%>: </a> </strong>
-									<%=usuarios[1].comentarios%></p>
+									<%=productos[0].comentarios.textoComentario[1]%></p>
 							</div>
 						</article>
 						<article>
@@ -46,7 +46,7 @@
 							<div class="data">
 								<p class="user">
 									<strong> <a href="/users/profile"><%=usuarios[2].usuario%>:</a> </strong>
-									<%=usuarios[2].comentarios%>
+									<%=productos[0].comentarios.textoComentario[2]%>
 									</p>
 							</div>
 						</article>
@@ -55,7 +55,7 @@
 							<div class="data">
 								<p class="user">
 									<strong> <a href="/users/profile"><%=usuarios[3].usuario%>: </a> </strong>
-									<%=usuarios[3].comentarios%></p>
+									<%=productos[0].comentarios.textoComentario[3]%></p>
 							</div>
 						</article>
 						<article>
@@ -63,7 +63,7 @@
 							<div class="data">
 								<p class="user">
 									<strong> <a href="/users/profile"><%=usuarios[4].usuario%>:</a> </strong>
-									<%=usuarios[4].comentarios%></p>
+									<%=productos[0].comentarios.textoComentario[4]%></p>
 							</div>
 						</article>
 
