--- a/ProyectoIntegrador/views/index.ejs
+++ b/ProyectoIntegrador/views/index.ejs
@@ -28,7 +28,7 @@
 						</figure>
 						<article class="product-box_data">
 							<h2>Ferrari</h2>
-							<p>Ferrari 428 Italia, destacado por su aceleracion. </p>
+							<p><%= productos[0].descripcion %> </p>
 							<p>Comentarios: 12</p>
 						</article>
 					</a>
@@ -42,7 +42,7 @@
 						</figure>
 						<article class="product-box_data">
 							<h2>Lamborghini</h2>
-							<p>Lamborghini Gallardo, un clasico a traves de los años.</p>
+							<p><%= productos[1].descripcion %> </p>
 							<p>Comentarios: 12</p>
 						</article>
 					</a>
@@ -56,7 +56,7 @@
 						</figure>
 						<article class="product-box_data">
 							<h2>Pagani</h2>
-							<p>Pagani Huraya, elegante como una gazela.</p>
+							<p><%= productos[2].descripcion %> </p>
 							<p>Comentarios: 12</p>
 						</article>
 					</a>
@@ -70,7 +70,7 @@
 						</figure>
 						<article class="product-box_data">
 							<h2>Porsche</h2>
-							<p>Porsche 930, un auto para gente con buen gusto.</p>
+							<p><%= productos[3].descripcion %> </p>
 							<p>Comentarios: 12</p>
 						</article>
 					</a>
@@ -94,7 +94,7 @@
 						</figure>
 						<article class="product-box_data">
 							<h2>BMW</h2>
-							<p>BMW M2, no es un auto, mas bien una experiencia.</p>
+							<p><%= productos[4].descripcion %> </p>
 							<p>Comentarios: 12</p>
 						</article>
 					</a>
@@ -108,7 +108,7 @@
 						</figure>
 						<article class="product-box_data">
 							<h2>Pontiac</h2>
-							<p>Pontiac GTO, un auto para los de la vieja escuela.</p>
+							<p><%= productos[5].descripcion %> </p>
 							<p>Comentarios: 12</p>
 						</article>
 					</a>
@@ -122,7 +122,7 @@
 						</figure>
 						<article class="product-box_data">
 							<h2>Alfa Romeo</h2>
-							<p>Alfa Romeo GTA, su lujoso interior es tope de gamma.</p>
+							<p><%= productos[6].descripcion %> </p>
 							<p>Comentarios: 12</p>
 						</article>
 					</a>
@@ -136,7 +136,7 @@
 						</figure>
 						<article class="product-box_data">
 							<h2>Nissan</h2>
-							<p>Nissan 370Z, para ganar en todas las carreras.</p>
+							<p><%= productos[7].descripcion %> </p>
 							<p>Comentarios: 12</p>
 						</article>
 					</a>
