--- a/ProyectoIntegrador/views/product.ejs
+++ b/ProyectoIntegrador/views/product.ejs
@@ -26,7 +26,7 @@
 				<div class="col-12 col-lg-4">
 					<section class="comments">
 						<article>
-							<img src="<%=usuarios[0].foto_de_perfil%>" alt="">
+							<img src="<%=usuarios[0].foto_de_perfil%>" alt="foto">
 							<div class="data">
 								<p class="user">
 								<strong> <a href="/users/profile"> </a> <%= usuarios[0].usuario   %>:</strong>
@@ -34,7 +34,7 @@
 							</div>
 						</article>
 						<article>
-							<img src="<%=usuarios[1].foto_de_perfil%>" alt="">
+							<img src="<%=usuarios[1].foto_de_perfil%>" alt="foto">
 							<div class="data">
 								<p class="user">
 									<strong> <a href="/users/profile"><%=usuarios[1].usuario%>: </a> </strong>
@@ -42,7 +42,7 @@
 							</div>
 						</article>
 						<article>
-							<img src="<%=usuarios[2].foto_de_perfil%>" alt="">
+							<img src="<%=usuarios[2].foto_de_perfil%>" alt="foto">
 							<div class="data">
 								<p class="user">
 									<strong> <a href="/users/profile"><%=usuarios[2].usuario%>:</a> </strong>
@@ -51,7 +51,7 @@
 							</div>
 						</article>
 						<article>
-							<img src="<%=usuarios[3].foto_de_perfil%>" alt="">
+							<img src="<%=usuarios[3].foto_de_perfil%>" alt="foto">
 							<div class="data">
 								<p class="user">
 									<strong> <a href="/users/profile"><%=usuarios[3].usuario%>: </a> </strong>
@@ -59,7 +59,7 @@
 							</div>
 						</article>
 						<article>
-							<img src="<%=usuarios[4].foto_de_perfil%>" alt="">
+							<img src="<%=usuarios[4].foto_de_perfil%>" alt="foto">
 							<div class="data">
 								<p class="user">
 									<strong> <a href="/users/profile"><%=usuarios[4].usuario%>:</a> </strong>
