--- a/ProyectoIntegrador/views/login.ejs
+++ b/ProyectoIntegrador/views/login.ejs
@@ -17,8 +17,8 @@
 			<h2 class="col-12"> 
 				<form action="/users" method="GET">
 					<div>
-						<label for="user">Usuario:</label>
-						<input id="user" type="email" name="email" value="">
+						<label for="user">Email:</label>
+						<input id="email" type="email" name="email" value="">
 					</div>
 					<div>
 						<label for="password">Contrasenia:</label>
