cambios en el header

--- a/ProyectoIntegrador/views/profile.ejs
+++ b/ProyectoIntegrador/views/profile.ejs
@@ -15,7 +15,7 @@
 			</div>
 			<div class="data-container col-6">
 				<div class="d-flex align-items-center ">
-					<h1 class="main-title"> <%=usuarios[0].usuario %>
+					<h1 class="main-title"> <%=locals.usuario.nombre %> 
 						<a href="/users/profileEdit">
 							<i class="fas fa-cog"></i>
 						</a>
