--- a/ProyectoIntegrador/views/partials/headerLogueado.ejs
+++ b/ProyectoIntegrador/views/partials/headerLogueado.ejs
@@ -29,12 +29,13 @@
         <nav class="main-navbar">
             <ul class="left-navbar">
                 <li><a href= "/">Todos los productos</a></li>
-                 <li><a href="/product/productAdd">Cargar productos</a></li>
+                <li><a href="/product/productAdd">Agregar productos</a></li>
+                <h2 style="color: white;">Bienvenido, <%= locals.usuario.nombre %></h2>
             </ul>
 
             <ul class="right-navbar">
                  <li><a href="/users/profile">
-                    usuario 1 <i class="fas fa-user"></i>
+                    Mi perfil <i class="fas fa-user"></i>
                     </a>
                 </li>
                 <li>
