--- a/ProyectoIntegrador/views/profile.ejs
+++ b/ProyectoIntegrador/views/profile.ejs
@@ -57,7 +57,7 @@
 			
 				<div class="col-12 col-sm-6 col-lg-3">
 					<section class="product-box">
-						<a href="/product">
+						<a href="/product/<%= usuario.Productos[i].id %>">
 							<figure class="product-box_image">
 								<img src="/images/products/<%= usuario.Productos[i].nombre_foto %>" alt="cafetera moulinex">
 							</figure>
@@ -71,111 +71,6 @@
 
 
 			<% } %>
-			
-			
-			<!-- <div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/product">
-						<figure class="product-box_image">
-							<img src="/images/products/auto2.jpeg" alt="cafetera moulinex">
-						</figure>
-						<article class="product-box_data">
-							<h2>Lamborghini</h2>
-							<p>Lamborghini Gallardo, un clasico a traves de los años.</p>
-							<p>Comentarios: 12</p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/product">
-						<figure class="product-box_image">
-							<img src="/images/products/auto3.jpg" alt="cafetera moulinex">
-						</figure>
-						<article class="product-box_data">
-							<h2>Pagani</h2>
-							<p>Pagani Huraya, elegante como una gazela.</p>
-							<p>Comentarios: 12</p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/product">
-						<figure class="product-box_image">
-							<img src="/images/products/auto4.jpeg" alt="cafetera moulinex">
-						</figure>
-						<article class="product-box_data">
-							<h2>Porsche</h2>
-							<p>Porsche 930, un auto para gente con buen gusto.</p>
-							<p>Comentarios: 12</p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/product">
-						<figure class="product-box_image">
-							<img src="/images/products/auto5.jpg" alt="cafetera moulinex">
-						</figure>
-						<article class="product-box_data">
-							<h2>BMW</h2>
-							<p>BMW M2, no es un auto, mas bien una experiencia.</p>
-							<p>Comentarios: 12</p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/product">
-						<figure class="product-box_image">
-							<img src="/images/products/auto6.jpg" alt="cafetera moulinex">
-						</figure>
-						<article class="product-box_data">
-							<h2>Pontiac</h2>
-							<p>Pontiac GTO, un auto para los de la vieja escuela.</p>
-							<p>Comentarios: 12</p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/product">
-						<figure class="product-box_image">
-							<img src="/images/products/auto7.jpeg" alt="cafetera moulinex">
-						</figure>
-						<article class="product-box_data">
-							<h2>Alfa Romeo</h2>
-							<p>Alfa Romeo GTA, su lujoso interior es tope de gamma.</p>
-							<p>Comentarios: 12</p>
-						</article>
-					</a>
-				</section>
-			</div>
-			<div class="col-12 col-sm-6 col-lg-3">
-				<section class="product-box">
-					<a href="/product">
-						<figure class="product-box_image">
-							<img src="/images/products/auto8.jpeg" alt="cafetera moulinex">
-						</figure>
-						<article class="product-box_data">
-							<h2>Nissan</h2>
-							<p>Nissan 370Z, para ganar en todas las carreras.</p>
-							<p>Comentarios: 12</p>
-						</article>
-					</a>
-				</section>
-			</div>
-		</div>
-	</div> -->
-	<!-- /Mis productos -->
-
-
 	<%- include('./partials/footer') %>
 
 </body>	
