--- a/ProyectoIntegrador/views/indexprueba.ejs
+++ b/ProyectoIntegrador/views/indexprueba.ejs
@@ -28,7 +28,7 @@
 			<% for(let i=0; i< 4; i++){ %>
 				<div class="col-12 col-sm-6 col-lg-3">
 					<section class="product-box">
-						<a href="/product/<%= autos[i].id %>">
+						<a href="/product">
 							<figure class="product-box_image">
 								<img src="images/products/<%= autos[i].nombre_foto %>" alt="cafetera moulinex">
 							</figure>
@@ -55,7 +55,7 @@
 			<% for(let i=5; i< 9; i++){ %>
 				<div class="col-12 col-sm-6 col-lg-3">
 					<section class="product-box">
-						<a href="/product/<%= autos[i].id %>">
+						<a href="/product">
 							<figure class="product-box_image">
 								<img src="images/products/<%= autos[i].nombre_foto %>" alt="cafetera moulinex">
 							</figure>
