--- a/ProyectoIntegrador/views/product.ejs
+++ b/ProyectoIntegrador/views/product.ejs
@@ -31,7 +31,7 @@
 
 						<section class="comments">
 							<article>
-								<img src="/public/images/users/usuario1.jpg" alt="foto">
+								<img src="/images/users/<%=product.Comentarios[i].Usuarios.foto_perfil%>" alt="foto">
 								<div class="data">
 									<p class="user">
 									<strong> <a href="/users/profile"> </a><%=product.Comentarios[i].Usuarios.nombre %> </strong>
