--- a/ProyectoIntegrador/views/index.ejs
+++ b/ProyectoIntegrador/views/index.ejs
@@ -49,7 +49,7 @@
     <div class="container products-wrapper">
 		<div class="row">
 			<div class="col-12">
-				<h2 class="products-title">Mas Comentados</h2>
+				<h2 class="products-title">Populares</h2>
 			</div>
 			<!-- Show the "ultimos" products -->
 			<% for(let i=5; i< 9; i++){ %>
