--- a/ProyectoIntegrador/views/profile-edit.ejs
+++ b/ProyectoIntegrador/views/profile-edit.ejs
@@ -19,14 +19,16 @@
 			</div>
 			<!-- Show the "ultimos" products -->
 			<h2 class="col-12"> 
-				<form action="/users/profile" method="GET">
+				<form action="/users/profileEdit" method="post">
 					<div>
 						<label for="email">Email:</label>
-						<input id="email" type="email" name="email" value="">
+						<input id="email" type="email" name="email" value="<%=locals.usuario.email %>">
+					
 					</div>
+					
 					<div>
 						<label for="user">Usuario:</label>
-						<input id="user" type="text" name="user" value="">
+						<input id="user" type="text" name="user" value="<%=locals.usuario.nombre %>">
 					</div>
 					<div>
 						<label for="password">Contrasenia:</label>
@@ -34,15 +36,15 @@
 					</div>
 					<div>
 						<label for="fecha">Fecha de nacimiento:</label>
-						<input id="fecha" type="date" name="fecha" value="">
+						<input id="fecha" type="date" name="fecha" value="<%=locals.usuario.fecha %>">
 					</div>
 					<div>
 						<label for="DNI">DNI:</label>
-						<input id="DNI" type="number" name="DNI" value="">
+						<input id="DNI" type="number" name="DNI" value="<%=locals.usuario.dni %>">
 					</div>
 					<div>
 						<label for="profile">Foto de perfil:</label>
-						<input id="profile" type="text" name="profile" value="">
+						<input id="profile" type="text" name="profile" value="<%=locals.usuario.foto_perfil %>">
 					</div>
 					<div>
 						<button type="submit">Enviar</button>
