--- a/ProyectoIntegrador/views/profile-edit.ejs
+++ b/ProyectoIntegrador/views/profile-edit.ejs
@@ -28,11 +28,11 @@
 					
 					<div>
 						<label for="user">Usuario:</label>
-						<input id="user" type="text" name="user" value="<%=locals.usuario.nombre %>">
+						<input id="nombre" type="text" name="nombre" value="<%=locals.usuario.nombre %>">
 					</div>
 					<div>
 						<label for="password">Contrasenia:</label>
-						<input id="password" type="password" name="password" value="">
+						<input id="contrasenia" type="password" name="contrasenia" value="">
 					</div>
 					<div>
 						<label for="fecha">Fecha de nacimiento:</label>
@@ -40,11 +40,11 @@
 					</div>
 					<div>
 						<label for="DNI">DNI:</label>
-						<input id="DNI" type="number" name="DNI" value="<%=locals.usuario.dni %>">
+						<input id="dni" type="number" name="dni" value="<%=locals.usuario.dni %>">
 					</div>
 					<div>
 						<label for="profile">Foto de perfil:</label>
-						<input id="profile" type="text" name="profile" value="<%=locals.usuario.foto_perfil %>">
+						<input id="foto_perfil" type="text" name="foto_perfil" value="<%=locals.usuario.foto_perfil %>">
 					</div>
 					<div>
 						<button type="submit">Enviar</button>
