--- a/ProyectoIntegrador/views/product.ejs
+++ b/ProyectoIntegrador/views/product.ejs
@@ -18,6 +18,9 @@
 			<p class="product-detail-description">
 				<a href="/product/productEdit/<%= product.id %>">Editar</a>
 			</p>
+			<p class="product-detail-description">
+				Subido por: <%= product.Usuarios.nombre %>
+			</p>
 		</div>
 		<div class="product-detail">
 			<div class="row">
